version/0.20/_sources/api/solver/_autosummary/settings/contact_angles.rst.txt
:orphan:

.. _contact_angles:

contact_angles
==============

.. autoclass:: ansys.fluent.core.solver.settings_241.contact_angles.contact_angles
    :show-inheritance:

.. rubric:: Methods

==========================================   =========================================

Method                                                                         Summary

==========================================   =========================================
:ref:`delete <delete_1>`                                      Delete selected objects.

:ref:`list <list>`                                      List the names of the objects.

:ref:`list_properties <list_properties_1>`       List active properties of the object.

:ref:`make_a_copy <make_a_copy>`                          Create a copy of the object.

==========================================   =========================================

.. rubric:: Named object type

:ref:`reference_frame_velocity_child <reference_frame_velocity_child>`


.. rubric:: Included in:

============================================   =======================================

Parent                                                                         Summary

============================================   =======================================
:ref:`porous_jump_child <porous_jump_child>`       'child_object_type' of porous_jump.

:ref:`phase_child <phase_child_16>`                      'child_object_type' of phase.

:ref:`multiphase <multiphase_7>`                                   Help not available.

============================================   =======================================

