version/0.22/_sources/api/solver/_autosummary/settings/contact_angles.rst.txt
:orphan:

.. _contact_angles:

contact_angles
==============

.. autoclass:: ansys.fluent.core.generated.solver.settings_242.contact_angles.contact_angles
    :show-inheritance:

.. rubric:: Methods

==========================================   =========================================

Method                                                                         Summary

==========================================   =========================================
:ref:`delete <delete_1>`                                      Delete selected objects.

:ref:`rename <rename>`                                              Rename the object.

:ref:`list <list>`                                      List the names of the objects.

:ref:`list_properties <list_properties_1>`       List active properties of the object.

:ref:`make_a_copy <make_a_copy>`                          Create a copy of the object.

==========================================   =========================================

.. rubric:: Named object type

:ref:`contact_angles_child <contact_angles_child>`


.. rubric:: Included in:

================================   =======================

Parent                                             Summary

================================   =======================
:ref:`porous_jump <porous_jump>`       Help not available.

:ref:`multiphase <multiphase_7>`       Help not available.

================================   =======================

